fix title text for each page, wrap translation tag around number and o

--- a/portal/templates/gil/500.html
+++ b/portal/templates/gil/500.html
@@ -1,5 +1,5 @@
 {% extends "gil/base.html" %}
-{% block title %}{{_("Truenth Error")}}{% endblock %}
+{% block title %}{{_("TrueNTH Error")}}{% endblock %}
 {% block head %}{{super()}}{% endblock %}
 {% block main %}
     <main class="main">
