--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -130,7 +130,7 @@
     <aside>
      <div class="module-wrap module-wrap--theme-gray">
         <div class="module">
-          <div class="accent-heading">{{_("Objective N")}}<em>o</em>1: {{_("TrueNTH Community")}}</div>
+          <div class="accent-heading">{% trans %}Objective N<em>o</em>1: TrueNTH Community{% endtrans %}</div>
           <h3 class="module__head">{{_("Everyone has a part to play in improving the prostate cancer journey.")}}</h3>
           <p class="module__body">{{_("The more people that join us, the better the tools will become for you and future generations.")}}</p>
           {% if not user %}
