--- a/portal/templates/gil/david_andrew_story.html
+++ b/portal/templates/gil/david_andrew_story.html
@@ -1,5 +1,5 @@
 {% extends "gil/lived_experience_base.html" %}
-{% block title %}{{_("Truenth Lived Experience - David and Andrew Perez Story")}}{% endblock %}
+{% block title %}{{_("TrueNTH Lived Experience - David and Andrew Perez Story")}}{% endblock %}
 {% block head %}{{super()}}{% endblock %}
 {% block main %}
     <main class="main main--story">
@@ -7,7 +7,7 @@
       <div class="page-intro module-wrap module-wrap--story">
         <div class="module">
           <div class="accent-heading">
-            {{_("Objective N")}}<em>{{_("o")}}</em>{{_("2: LIVED EXPERIENCE")}}
+            {% trans %}Objective N<em>o</em>2: LIVED EXPERIENCE{% endtrans %}
           </div>
           <div class="module__body">
             <p class="story-title">{{_("DAVID AND ANDREW PEREZ")}}</p>
