--- a/portal/templates/gil/hirsch_brothers_story.html
+++ b/portal/templates/gil/hirsch_brothers_story.html
@@ -7,7 +7,7 @@
       <div class="page-intro module-wrap module-wrap--story">
         <div class="module">
           <div class="accent-heading">
-            {{_("Objective N")}}<em>o</em>{{_("2: LIVED EXPERIENCE")}}
+            {% trans %}Objective N<em>o</em>2: LIVED EXPERIENCE{% endtrans %}
           </div>
           <div class="module__body">
             <p class="story-title">{{_("THE HIRSCH BROTHERS")}}</p>
