--- a/portal/templates/gil/portal.html
+++ b/portal/templates/gil/portal.html
@@ -1,6 +1,6 @@
 {%- from "gil/macros.html" import footerHTML -%}
 {%- extends "gil/base.html" -%}
-{% block title %}{{_("Truenth Dashboard")}}{% endblock %}
+{% block title %}{{_("TrueNTH Dashboard")}}{% endblock %}
 {% block head %}{{super()}}{% endblock %}
 {% block main %}
 {{ super() }}
