--- a/portal/templates/gil/privacy.html
+++ b/portal/templates/gil/privacy.html
@@ -1,5 +1,5 @@
 {% extends "gil/base.html" %}
-{% block title %}{{_("Truenth Privacy Statement")}}{% endblock %}
+{% block title %}{{_("TrueNTH Privacy Statement")}}{% endblock %}
 {% block head %}{{super()}}{% endblock %}
 {% block main %}
     <main class="main">
