--- a/portal/templates/gil/terms.html
+++ b/portal/templates/gil/terms.html
@@ -1,5 +1,5 @@
 {% extends "gil/base.html" %}
-{% block title %}{{_("Truenth Terms and Conditions")}}{% endblock %}
+{% block title %}{{_("TrueNTH Terms and Conditions")}}{% endblock %}
 {% block head %}{{super()}}{% endblock %}
 {% block main %}
     <main class="main">
