--- a/portal/templates/gil/404.html
+++ b/portal/templates/gil/404.html
@@ -1,5 +1,5 @@
 {% extends "gil/base.html" %}
-{% block title %}{{_("Truenth Page Not Found")}}{% endblock %}
+{% block title %}{{_("TrueNTH Page Not Found")}}{% endblock %}
 {% block head %}{{super()}}{% endblock %}
 {% block main %}
     <main class="main">
