title fix for HIRSCH BROTHERS page

--- a/portal/templates/gil/hirsch_brothers_story.html
+++ b/portal/templates/gil/hirsch_brothers_story.html
@@ -1,5 +1,5 @@
 {% extends "gil/lived_experience_base.html" %}
-{% block title %}{{_("Truenth Lived Experience - Hirsch Brothers Story")}}{% endblock %}
+{% block title %}{{_("TrueNTH Lived Experience - Hirsch Brothers Story")}}{% endblock %}
 {% block head %}{{super()}}{% endblock %}
 {% block main %}
     <main class="main main--story">
